--- a/wedpage1/homepage/index.html
+++ b/wedpage1/homepage/index.html
@@ -2,12 +2,19 @@
 <html>
  <head>
    <link rel="stylesheet" href= "style.css">
-    <img src="noun_project_7395.svg" alt="mop" width="100" height="100">
-  <img src="noun_project_1240.svg" alt="controller" width="100" height="100">
+   <link href='http://fonts.googleapis.com/css?family=Iceland' rel='stylesheet' type='text/css'>
  </head>
  <body>
-  <h1>Jeremy Sutton Frye </h1>
-  <h2>I play videogames and clean floors. Sometimes at the same time. </h2>
+  <div id="text">
+   <h1>Jeremy Sutton Frye </h1>
+   <h3>I play videogames and clean floors. Sometimes at the same time. </h3>
+  </div>
+  <div id="images">
+   <img src="noun_project_7395.svg" alt="mop" width="100" height="100">
+   <img src="noun_project_1240.svg" alt="controller" width="100" height="100">
+   <img src="noun_project_4289.svg" alt="man" width="100px" height="100px">
+   <img src="noun_project_10353.svg" alt="book" width="100" height="100">
+  </div>
 
  </body>
 </html>
